ui/webui/resources/cr_components/composebox/composebox.css
/* Copyright 2025 The Chromium Authors
 * Use of this source code is governed by a BSD-style license that can be
 * found in the LICENSE file. */

/* #css_wrapper_metadata_start
 * #type=style-lit
 * #import=//resources/cr_elements/cr_icons_lit.css.js
 * #import=./composebox_shared_style.css.js
 * #scheme=relative
 * #include=cr-icons-lit composebox-shared-style
 * #css_wrapper_metadata_end */

:host {
  --color-composebox-submit-button-hover: var(--color-searchbox-results-background-hovered);
  --composebox-cancel-button-top: var(--cr-composebox-cancel-button-top, 12px);
  --cr-composebox-outline-hcm: solid var(--color-composebox-outline-hcm);
  --cr-composebox-submit-container-size: 40px;
  --cr-icon-button-size: 36px;
  --input-bottom-spacing: 10px;
  --text-input-top-spacing: 10px;
  --text-input-inline-end-spacing: 80px;
  --text-input-inline-start-spacing: 16px;
  --text-input-max-height: 190px;
  --expanded-border-radius: var(--cr-composebox-expanded-border-radius, 26px);
  --standard-curve: cubic-bezier(0.4, 0, 0.2, 1);
  --emphasized-accelerate: cubic-bezier(0.3, 0, 0.8, 0.15);
  --emphasized-curve: linear(
    0,
    0.002,
    0.01 3.6%,
    0.02 4.9%,
    0.034,
    0.053,
    0.074,
    0.1,
    0.128,
    0.16,
    0.194 13.4%,
    0.271 15%,
    0.344 16.1%,
    0.477 17.5%,
    0.544 18.3%,
    0.607,
    0.66 20.6%,
    0.717 22.4%,
    0.742,
    0.765,
    0.788,
    0.808,
    0.827,
    0.845 30.4%,
    0.865 32.6%,
    0.866,
    0.865 32.7%,
    0.869 33.1%,
    0.883 35.1%,
    0.9 37.7%,
    0.916 40.6%,
    0.929 43.8%,
    0.942 47.2%,
    0.953 51%,
    0.963 55%,
    0.972 59.3%,
    0.979 64%,
    0.986 69%,
    0.991 74.4%,
    0.998 86.4%,
    1
  );
  --border-radius-transition: border-radius var(--collapse-duration)
    var(--emphasized-curve);
  --fade-duration: 100ms;
  --height-expand-duration: 600ms;
  --icon-entry-transition: opacity var(--expand-ease-out-duration) linear 800ms;
  --icon-exit-transition: opacity var(--collapse-ease-in-duration)
    var(--emphasized-accelerate);
  --lens-icon-animation-duration: 1100ms;

  --submit-enabled-transition: opacity 255ms;

  border-radius: 30px;
  box-shadow: var(--cr-searchbox-shadow);
  font-size: var(--cr-composebox-font-size, 18px);
  transition: var(--border-radius-transition),
      /* Fast out (start), slow in (end) box shadow transition. */
      box-shadow 500ms cubic-bezier(0.4, 0.0, 0.2, 1);
  width: var(--cr-composebox-width, 337px);
}

:host(:not([searchbox-next-enabled])) {
  --expand-ease-in-duration: 400ms;
  --expand-delay: 300ms;
  --expand-ease-out-duration: 300ms;
  --expand-duration: calc(
    var(--expand-ease-in-duration) + var(--expand-delay) +
      var(--expand-ease-out-duration)
  );
  --collapse-ease-in-duration: 100ms;
  --collapse-ease-out-duration: 500ms;
  --collapse-duration: calc(
    var(--collapse-ease-in-duration) + var(--collapse-ease-out-duration)
  );
}

:host([searchbox-next-enabled]) {
  --cr-composebox-font-size: var(--cr-composebox-custom-font-size, 16px);
  --contextual-entrypoint-and-carousel-context-menu-container-padding-inline-start: 0px;
  /*
   * TODO(crbug.com/470081925): Refactor and keep necessary
   * --input-bottom-spacing values in this file.
   */
  --input-bottom-spacing: 12px;
  --text-input-inline-start-spacing: var(--cr-composebox-text-input-inline-start, 18px);
}

:host([expanding_]) {
  border-radius: var(--expanded-border-radius);
}

#errorScrim {
  border-radius: inherit;
}

#composebox {
  border-radius: inherit;
  display: flex;
  flex-direction: column;
  pointer-events: auto;
  position: relative;
  overflow: hidden;
  transition:
    opacity var(--fade-duration) ease-in-out,
    visibility var(--fade-duration) ease-in-out;
}

:host([searchbox-next-enabled]) #composebox {
  padding-bottom: 10px;
}

search-animated-glow {
  pointer-events: none;
  inset: -2px;
  z-index: 1;
}

:host([is-dragging-file][energy-effect-animation-enabled]) search-animated-glow {
  position: absolute;
  z-index: auto;
}

:host([is-collapsible]) #composebox {
  min-height: 60px;
  max-height: 60px;
  transition:
    max-height var(--collapse-duration) var(--emphasized-curve),
    min-height var(--collapse-duration) var(--emphasized-curve),
    opacity var(--fade-duration) ease-in-out,
    visibility var(--fade-duration) ease-in-out;
}

:host(:not([is-collapsible])) #composebox {
  /* If the composebox is not expandable, meaning expanding_ is always true,
   * then the above transition will never be triggered. Instead, manually
   * start the animation so it expands as soon as it is rendered */
  height: 60px;
}

:host([expanding_]) #composebox {
  height: calc-size(auto, size);
  max-height: var(--cr-composebox-max-height, 422px);
  transition:
    max-height var(--expand-duration) var(--emphasized-curve),
    min-height var(--expand-duration) var(--emphasized-curve),
    opacity var(--fade-duration) ease-in-out,
    visibility var(--fade-duration) ease-in-out;
}

:host([is-collapsible][expanding_]) #composebox {
  min-height: 136px;
  max-height: 254px;
}

:host([is-collapsible][expanding_][show-file-carousel][carousel-on-top_]) #composebox {
  min-height: calc(136px + 52px);
}

#inputContainer {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  padding-bottom: var(--input-bottom-spacing);
  overflow: hidden;
  width: 100%;
}

:host([searchbox-next-enabled]) #inputContainer {
  --input-bottom-spacing: 0;
}

:host-context([dir='rtl']) .action-icon {
  left: 16px;
  right: unset;
}

@keyframes fade-out-in {
  0% {
    opacity: 0;
  }

  73% {
    opacity: 0;
  }
}

#lensIcon {
  --cr-icon-button-icon-size: 20px;
  --cr-icon-image: url(//resources/cr_components/searchbox/icons/camera.svg);
  bottom: var(--input-bottom-spacing);
  display: none;
  opacity: 1;
  position: absolute;
  inset-inline-end: 16px;
  top: 6px;
}
/* ... */

